fixing detail page display on mobile

--- a/stylesd.css
+++ b/stylesd.css
@@ -90,7 +90,7 @@
   }
 
   .tittle{
-    margin: 50px 0px 10px 35px;
+    margin: 80px 0px 10px 26px;
     font-size: 13px;
   }
 
@@ -98,12 +98,12 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    margin: 20px 40px 0px;
+    margin: 20px 30px 0px;
   }
 
   .title {
     margin-top: 0px;
-    margin-left: 15px;
+    margin-left: 0px;
     font-size: 18px;
   }
 
@@ -116,7 +116,7 @@
   .more {
     margin-top: 0px;
     margin-bottom: 40px;
-    margin-left: 10px;
+    margin-left: -15px;
     font-size: 20px;
     gap: 10px;
     width: 350px;
